Swapping to vars

--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -47,8 +47,8 @@ jobs:
           id: apply
           env:
             TF_VAR_region: us-east-1
-            TF_VAR_environment: ${{ env.ENVIRONMENT }}
-            TF_VAR_s3_bucket_name: ${{ env.S3_BUCKET_NAME }}
+            TF_VAR_environment: ${{ vars.ENVIRONMENT }}
+            TF_VAR_s3_bucket_name: ${{ vars.S3_BUCKET_NAME }}
           run: terraform apply -no-color -input=false --auto-approve
 
     eventPublisher:
@@ -88,7 +88,7 @@ jobs:
             - name: Archive and Publish
               run: |
                 tar -czf ./event-publisher-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
-                aws s3 cp ./event-publisher-${{ github.run_number }}.tar.gz s3://${{ env.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
+                aws s3 cp ./event-publisher-${{ github.run_number }}.tar.gz s3://${{ vars.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
       
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
@@ -134,7 +134,7 @@ jobs:
         - name: Archive and Publish
           run: |
             tar -czf ./event-handler-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
-            aws s3 cp ./event-handler-${{ github.run_number }}.tar.gz s3://${{ env.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
+            aws s3 cp ./event-handler-${{ github.run_number }}.tar.gz s3://${{ vars.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
   
         - name: Upload Artifacts
           uses: actions/upload-artifact@v2
@@ -184,8 +184,8 @@ jobs:
           id: apply
           env:
             TF_VAR_region: us-east-1
-            TF_VAR_environment: ${{ env.ENVIRONMENT }}
-            TF_VAR_s3_bucket_name: ${{ env.S3_BUCKET_NAME }}
+            TF_VAR_environment: ${{ vars.ENVIRONMENT }}
+            TF_VAR_s3_bucket_name: ${{ vars.S3_BUCKET_NAME }}
             TF_VAR_event_publisher_artifact_path: artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
             TF_VAR_event_handler_artifact_path: artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
             TF_VAR_sqs_batch_size: "1"
