--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -91,7 +91,7 @@ jobs:
             - name: Archive and Publish
               run: |
                 tar -czf ./event-publisher-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
-                aws s3 cp ./event-publisher-${{ github.run_number }}.tar.gz s3://${{ vars.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
+                aws s3 cp ./event-publisher-${{ github.run_number }}.tar.gz s3://${{ vars.S3_BUCKET_NAME }}-${{ vars.ENVIRONMENT }}/artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
       
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
@@ -140,7 +140,7 @@ jobs:
         - name: Archive and Publish
           run: |
             tar -czf ./event-handler-${{ github.run_number }}.tar.gz ./prod ./node_modules ./package.json
-            aws s3 cp ./event-handler-${{ github.run_number }}.tar.gz s3://${{ vars.S3_BUCKET_NAME }}/artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
+            aws s3 cp ./event-handler-${{ github.run_number }}.tar.gz s3://${{ vars.S3_BUCKET_NAME }}-${{ vars.ENVIRONMENT }}/artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
   
         - name: Upload Artifacts
           uses: actions/upload-artifact@v2
@@ -191,7 +191,7 @@ jobs:
           env:
             TF_VAR_region: us-east-1
             TF_VAR_environment: ${{ vars.ENVIRONMENT }}
-            TF_VAR_s3_bucket_name: ${{ vars.S3_BUCKET_NAME }}
+            TF_VAR_s3_bucket_name: ${{ vars.S3_BUCKET_NAME }}-${{ vars.ENVIRONMENT }}
             TF_VAR_event_publisher_artifact_path: artifacts/${{ github.run_number }}/event-publisher-${{ github.run_number }}.tar.gz
             TF_VAR_event_handler_artifact_path: artifacts/${{ github.run_number }}/event-handler-${{ github.run_number }}.tar.gz
             TF_VAR_sqs_batch_size: "1"
