Dyanmically passing workspace name to use

--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -183,6 +183,10 @@ jobs:
         - name: Terraform Init
           id: init
           run: terraform init
+
+        - name: Select Workspace
+          id: select_workspace
+          run: terraform workspace select ${{ vars.WORKSPACE }}
   
         - name: Terraform Apply
           id: apply
