--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -224,13 +224,17 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
+      - name: Select Workspace
+        id: select_workspace
+        run: terraform workspace select ${{ vars.WORKSPACE }}
+
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
         env:
           TF_VAR_region: us-east-1
           TF_VAR_environment: development
-          TF_VAR_s3_bucket_name: ${{ env.S3_BUCKET_NAME }}
+          TF_VAR_s3_bucket_name: ${{ vars.S3_BUCKET_NAME }}
           TF_VAR_event_publisher_artifact_path: event-publisher-${{ github.run_number }}.tar.gz
           TF_VAR_event_handler_artifact_path: event-handler-${{ github.run_number }}.tar.gz
           TF_VAR_sqs_batch_size: "1"
