Adding in workspace select

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -286,6 +286,10 @@ jobs:
         id: init
         run: terraform init
 
+      - name: Select Workspace
+        id: workspace
+        run: terraform workspace select ${{ vars.WORKSPACE }} || terraform workspace new ${{ vars.WORKSPACE }}
+
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
