--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,12 +138,8 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
-
-      - name: Select Workspace
-        id: workspace
-        run: terraform workspace select ${{ vars.WORKSPACE }} || terraform workspace new ${{ vars.WORKSPACE }}
-
+        run: terraform init -backend-config=/backend-configs/${{ vars.ENVIRONMENT }}.hcl
+  
       - name: Apply
         id: apply
         env:
