--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,7 +138,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config=/backend-configs/${{ vars.ENVIRONMENT }}.hcl
+        run: terraform init -backend-config=/backend-configs/${{ vars.ENVIRONMENT }}.remote.tfbackend
   
       - name: Apply
         id: apply
