--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -283,7 +283,7 @@ jobs:
       contents: read
     needs: 
       - terraformPreReqs
-      - eventHandlerBuild
+      - createTeamHandlerBuild
 
     steps:
       - uses: FranzDiebold/github-env-vars-action@v2.1.0
