--- a/functions/clash-bot/team/create/tsconfig.json
+++ b/functions/clash-bot/team/create/tsconfig.json
@@ -15,6 +15,8 @@
       "outDir": "prod",
       "baseUrl": ".",
       "paths": {
+        "clash-bot-shared": [ "node_modules/clash-bot-shared/src"],
+        "clash-bot-shared/*": [ "node_modules/clash-bot-shared/src/*"]
       }
     },
     "include": ["src/**/*"],
